<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp">
        <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/avatar">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                                android:id="@+id/human_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:textAppearance="?android:textAppearanceLarge"
                                android:padding="@dimen/profile_padding_each"/>
                        <TextView
                                android:id="@+id/nick_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/human_name"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"/>
                        <TextView
                                android:id="@+id/about"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/nick_name"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"/>
                        <TextView
                                android:id="@+id/location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/about"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"
                                android:text="@string/location"/>
                        <TextView
                                android:id="@+id/relationship"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/location"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"
                                android:text="@string/relationship"/>
                        <TextView
                                android:id="@+id/birthday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/relationship"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"
                                android:text="@string/birthday"/>
                        <ImageView
                                android:id="@+id/gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/birthday"
                                android:layout_alignParentLeft="true"
                                android:padding="@dimen/profile_padding_each"
                                android:src="@drawable/question"/>
                </RelativeLayout>
        </ScrollView>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/avatar">
                <TextView
                        android:id="@+id/karma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/profile_padding_each"
                        android:text="@string/karma"/>
                <TextView
                        android:id="@+id/plurks_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/profile_padding_each"
                        android:text="@string/plurks"/>
                <TextView
                        android:id="@+id/replurks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/profile_padding_each"
                        android:text="@string/plurks_response"/>
                <TextView
                        android:id="@+id/are_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/profile_padding_each"
                        android:text="@string/are_friends"/>
                <TextView
                        android:id="@+id/is_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/profile_padding_each"
                        android:text="@string/is_following"/>
        </LinearLayout>

</RelativeLayout>